feat: фильтры (#188)